--- a/arxiv-paper/spconf.sty
+++ b/arxiv-paper/spconf.sty
@@ -244,7 +244,7 @@
 to\hsize{\hfil\box\@tempboxa\hfil}
  \fi}
 
-\def\fnum@figure{{\bf Fig.\ \thefigure}}
+\def\fnum@figure{{\bf Figure\ \thefigure}}
 \def\fnum@table{{\bf Table \thetable}}
 
 \flushbottom
